force-app/main/default/objects/Resource_Request__c/Resource_Request__c.object-meta.xml
<CustomObject>
    <description>Structured need generated by the Needs Assessment Agent.</description>
    <label>Resource Request</label>
    <nameField>
        <displayFormat>RR-{0000}</displayFormat>
        <label>Request Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Resource Requests</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>