force-app/main/default/objects/Resource_Request__c/fields/Required_By__c.field-meta.xml
<CustomField>
    <fullName>Required_By__c</fullName>
    <label>Required By</label>
    <type>DateTime</type>
</CustomField>