force-app/main/default/objects/Resource_Request__c/fields/Resource_Type__c.field-meta.xml
<CustomField>
    <fullName>Resource_Type__c</fullName>
    <label>Resource Type</label>
    <length>80</length>
    <type>Text</type>
</CustomField>